apps/99-test/bookshelf/overlays/dev/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookshelf-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    traefik.ingress.kubernetes.io/router.middlewares: traefik-redirect-https@kubernetescrd
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Bookshelf
    gethomepage.dev/group: Test
spec:
  ingressClassName: traefik
  rules:
    - host: bookshelf.dev.truxonline.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bookshelf
                port:
                  number: 8787
  tls:
    - hosts:
        - bookshelf.dev.truxonline.com
      secretName: bookshelf-tls-dev
